add a couple different ways of enforcing constraints
